# talk_webapp_template_and_pipeline_on_azure

./: README.md
ado_pipeline_repo/: README.md  appBuild.yml  appDeploy.yml  authConfigforAppService.yml  sonarcloud.yml
ado_pipeline_repo/WebApp_Bicep_Deployment/: wabicepDeployment.yml
ado_pipeline_repo/WebApp_Bicep_Deployment/deploy/: deploy.bicep  deploy.bicepparam  nkd_pipeline_utils.py  resources.bicep
app_template_repo/: .gitignore  README.md  azure-pipeline-web-app.yml  pyproject.toml  settings.yaml
app_template_repo/.streamlit/: config.toml
app_template_repo/src/: app.py  config.py
app_template_repo/src/pages/: multipage1.py
app_template_repo/src/tests/: conftest.py  test_app.py
app_template_repo/src/ui/: __init__.py  ui.py
